--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-
-  <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBh8tHJrxYqTIUl1_LlKeYGnvdVBsfQPu8&libraries=places"></script> -->
+  <script>
+    window.onresize = function(){ location.reload(); }
+  </script>
 </html>
